# Argus

./: .gitignore  CLAUDE.md  CODEBASE.md  MIGRATION.md  Makefile  README.md  docker-compose.yml  openreview_reviews.py  reviews2.md  score_scales.json
api/: .dockerignore  .env.example  Dockerfile  pyproject.toml  shared-db.env.example
api/alembic/: env.py
api/alembic/versions/: 0001_initial.py  0002_learning_pathways.py  0002_papers_abstract_trgm.py  0003_openreview_ingest_failures.py  0003_pathway_enrichment.py  0004_merge_heads.py  0005_citation_graph.py  0006_api_rate_limits.py  0007_paper_graph_metrics.py
api/app/: config.py  deps.py  main.py
api/app/db/: models.py  session.py
api/app/routers/: corpus.py  health.py  papers.py  pathways.py  rankings.py  saved.py  search.py
api/app/schemas/: citation.py  graph.py  paper.py  pathway.py
api/app/services/: analyze.py  citation_pdf.py  citation_providers.py  citations.py  dimensions.py  graph_metrics.py  ingest.py  ingest_failures.py  landing_graph.py  neurips_import.py  openreview_client.py  openreview_search.py  paper_view.py  pathways.py  rankings.py  scoring.py  search.py  static_corpus.py  veros_score.py
api/app/services/embeddings/: factory.py  provider.py  (+1 more)
api/app/utils/: ratings.py
api/app/workers/: celery_app.py  tasks.py
api/scripts/: backfill_veros_scores.py  compute_pagerank.py  export_static_corpus.py  fetch_openreview_venue_jsonl.py  import_crawled_citations.py  import_neurips_2025.py  import_openreview_jsonl.py  ingest_openreview_venue.py  merge_db_to_shared.py
api/tests/: test_app.py
(+86 files in other folders)
