[project]
name = "veros-api"
version = "0.1.0"
description = "Veros FastAPI backend — OpenReview ingestion, scoring, AI insights."
requires-python = ">=3.12,<3.14"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlmodel>=0.0.22",
    "psycopg[binary]>=3.2",
    "alembic>=1.13",
    "pydantic-settings>=2.5",
    "celery[redis]>=5.4",
    "redis>=5.0",
    "openreview-py>=1.50",
    "openai>=1.50",
    "pgvector>=0.3",
    "httpx>=0.27",
    "python-multipart>=0.0.12",
    "sentence-transformers>=5.4.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "ruff>=0.7",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
